Fix some alignment issues on borrower profile page

--- a/source/css/scss/app/pages/loan.scss
+++ b/source/css/scss/app/pages/loan.scss
@@ -125,6 +125,7 @@
 		}
 	}
 	.raised-info {
+		margin: 0;
 		div, .lender-count {
 			padding: 0;
 		}
@@ -281,6 +282,7 @@
 }
 
 .lend-action {
+	margin: 0;
 	.lend-button-wrapper {
 		display: inline;
 		padding: 0;
